reports/ranking.log
Traceback (most recent call last):
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
df_community_score = df_active.nlargest(40, "community")

fig = px.bar(
    df_community_score,
    x=df_community_score["community"],
    y=df_community_score["project_name"],
    orientation="h",
    range_x=(2.5, 3),
    custom_data=["oneliner", "topic", "git_url"],
    color=df_community_score["development_distribution_score"],
    color_continuous_scale=color_continuous_scale,
)

fig.update_layout(
    height=1000,  # Added parameter
    width=900,
    xaxis_title="Community score",
    yaxis_title=None,
    title="Top 40 community score",
    coloraxis_colorbar=dict(
        title="DDS",
    ),
    hoverlabel=dict(
        bgcolor="white",
    ),
    dragmode=False,
)
fig.update(layout_showlegend=False)
fig["layout"].update(margin=dict(l=200, r=0, b=0, t=40))

fig.add_layout_image(
    dict(
        source=logo_img,
        xref="paper",
        yref="paper",s
        x=1,
        y=0,
        sizex=0.05,
        sizey=0.05,
        xanchor="right",
        yanchor="bottom",
    )
)

fig.update_traces(
    hovertemplate="<br>".join(
        [
            "Project Info: <b>%{customdata[0]}</b>",
            "Topic: <b>%{customdata[1]}</b>",
            "Git URL: <b>%{customdata[2]}</b>",
        ]
    )
)
fig["layout"].update(margin=dict(l=30, r=0, b=0, t=40))
fig["layout"]["yaxis"]["autorange"] = "reversed"
fig.show()
------------------

[0;36m  Cell [0;32mIn[5], line 36[0;36m[0m
[0;31m    x=1,[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (2577666174.py, line 36)

